website: minor cleanups

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
             <div id="warning"></div>
 
             <div id="devmode"> <!-- {{{1 -->
-                Developer mode <a href="#faq_devmode">[?]</a>
-                <div class="switch">
-                    <input id="devmode_button" type="checkbox" class="switch-input" />
-                    <label for="devmode_button" class="switch-label" tabindex="0"></label>
+                Developer mode 
+                <div id="devmode-inner"> <input id="devmode_button" type="checkbox" class="devmode-input" />
+                    <label for="devmode_button" class="devmode-label" tabindex="0"></label>
                 </div>
             </div> <!-- /devmode }}}1 -->
 
