website: add google verification tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Jonathan Yong">
         <meta name="description" content="Website to automatically generate NOAH pulse programmes in Bruker format">
+        <meta name="google-site-verification" content="_0GQ3Y9D3hJ452C7-uVNppzdv3r0qEbomLKxUfj2tfU" />
         <link rel="icon" href="data:,"><!-- stops Chrome from asking for a favicon -->
         <link rel="stylesheet" type="text/css" href="static/css/main.css">
         <link rel="stylesheet" type="text/css" href="static/css/modules.css">
