website, pprogs: add H_ZG module

--- a/index.html
+++ b/index.html
@@ -501,6 +501,10 @@
                                 <input type="radio" name="h1" id="H_TOCSY_K"></input>
                                 <label for="H_TOCSY_K">H_TOCSY_K</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_ZG"></input>
+                                <label for="H_ZG">H_ZG</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
